# projet_chess

./: CMakeLists.txt  README.md  imgui.ini
src/: App.cpp  App.hpp  Utils.hpp  chessboard.cpp  chessboard.hpp  main.cpp
src/Board/: Board.hpp  Case.hpp
src/Game/: ChaosUtils.cpp  ChaosUtils.hpp  Game.cpp  Game.hpp  GameChaos.cpp  GameChaos.hpp  GameClassic.cpp  GameClassic.hpp  Utils.cpp  Utils.hpp  chessboard.cpp  chessboard.hpp
src/Game/Pieces/: BerolinaPawn.cpp  BerolinaPawn.hpp  Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.hpp  Queen.cpp  Queen.hpp  Rook.cpp
src/Menu/: Menu.cpp  Menu.hpp
src/Pieces/: Bishop.hpp  King.cpp  King.hpp  Knight.cpp  Knight.hpp  Pawn.cpp  Pawn.hpp  Piece.hpp  Rook.hpp
src/Render2D/: GameRender.cpp  GameRender.hpp
src/Render3D/: Ambiance.hpp  Board.hpp  Camera.hpp  Model.hpp  ObjLoader.cpp  ObjLoader.hpp  OpenGL.hpp  Shader.cpp  Shader.hpp  Skybox.hpp
src/Render3D/Board/: Board.hpp  Case.hpp
src/Rendering/: Model.hpp  ObjLoader.cpp  ObjLoader.hpp  OpenGL.hpp  Shader.cpp
src/Shaders/: board.fs  board.vs  skybox.fs  skybox.vs
src/View/: GameRender.cpp  GameRender.hpp
src/pieces/: pion.cpp  pion.hpp
